[package]
name = "jonases-tracing-util"
version = "0.1.0"
authors = ["jofas <jonas@fc-web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "^0.1.25"
tracing-subscriber = "^0.2.16"
uuid = { version = "^0.8.2", features = ["v4", "serde"] }
actix-web = "^3.3.2"
futures = "^0.3.13"
